Actualización index.html con img GEO

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     
                 <div class="proyecto">
                     <div class="proyecto-img">
-                        <img src="img/CommuniTip.png" alt="">
+                        <img src="img/ComunidadGEO.png" alt="">
                     </div>
                     <div class="proyecto-info">
                         <h2>COMMUNITIP</h2>
