Corrección index.html - Rev 0.0.1

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <img src="img/ComunidadGEO.png" alt="">
                     </div>
                     <div class="proyecto-info">
-                        <h2>COMMUNITIP</h2>
+                        <h2>COMUNIDADGEO</h2>
                         <p>UX/UI Design</p>
                         <p>PLATAFORMA DIGITAL</p>
                         <p>Plataforma comunitaria para compartir tips, información y actividades sobre sustentabilidad</p>
